--- a/index.html
+++ b/index.html
@@ -49,24 +49,11 @@
     .modal-overlay {
       background: rgba(0, 0, 0, 0.85);
     }
-    .modal-overlay input,
-    .modal-overlay button {
-      transition: all 0.2s;
-    }
-    .modal-overlay input:focus {
-      outline: none;
-      border-color: yellow;
-    }
-    .modal-overlay button:hover {
-      background: white;
-      color: black;
-    }
   </style>
 </head>
 <body class="bg-black text-white font-mono">
   <div class="p-4 max-w-md mx-auto content-pad">
     <h1 class="text-2xl font-bold text-center mb-4 tracking-widest text-yellow-300">LAXMI VINAYAKA</h1>
-    <a href="https://docs.google.com/spreadsheets/d/1O_9y6a2ACTyyfj27RebIshe5h1XpxUuOUUe056WgnFg/edit?usp=sharing" target="_blank" class="fixed top-2 right-2 border border-white text-white px-3 py-1 rounded text-sm">🔧 Sheet</a>
 
     <div id="category-page">
       <h2 class="text-xl font-semibold mb-2">Select Category</h2>
@@ -105,7 +92,7 @@
   </div>
 
   <div id="bill-modal" class="modal-overlay fixed inset-0 flex items-center justify-center hidden no-print z-50">
-    <div class="bg-black border border-white w-11/12 max-w-xs p-4 rounded shadow text-sm">
+    <div class="bg-black border border-white w-11/12 max-w-lg p-4 rounded shadow text-sm">
       <div class="text-center mb-2">
         <h2 class="text-lg font-bold text-yellow-300 tracking-wider">Laxmi Vinayaka Electricals</h2>
         <div id="bill-date" class="text-xs">Date: </div>
@@ -114,7 +101,6 @@
       <div id="receipt-items" class="space-y-1"></div>
       <hr class="my-2 border-white">
       <div class="text-right font-bold">Total: ₹<span id="receipt-total">0.00</span></div>
-
       <div class="mt-4 grid grid-cols-2 gap-2">
         <button onclick="downloadBillPDF()" class="border border-white py-1 rounded">Download PDF</button>
         <div class="col-span-2 space-y-2">
@@ -128,14 +114,23 @@
   </div>
 
   <script>
-    const API_URL = 'https://script.google.com/macros/s/AKfycbwWbLd-QBwjWnPGVqwLFMu-PIq9uaigI43S3kP2YRmMnCV0gVDtqpfhU08lLAl4SshAsQ/exec';
+    const API_URL = 'https://script.google.com/macros/s/AKfycbxv0BY0BgDvUEAT0VGEmkHPLwVDWz90NFVVlbKsRmPKrHUwjORtAiDzzGVDXsuqrZzDPw/exec';
     let rows = [], cart = {}, current = { category: '', brand: '', type: '' };
     let cartExpanded = false;
 
     fetch(API_URL)
       .then(r => r.json())
       .then(data => {
-        rows = data.map(r => ({ id: r[0], category: r[1], brand: r[2], itemType: r[3], variant: r[4], price: parseFloat(r[5]) }));
+        rows = data.map(r => ({
+          id: r[0],
+          category: r[1],
+          brand: r[2],
+          itemType: r[3],
+          variant: r[4],
+          price: parseFloat(r[5]),
+          cost: parseFloat(r[6]),
+          discountNote: r[7] || ''
+        }));
         showCategories();
       });
 
@@ -168,19 +163,17 @@
       current.type = t;
       const vars = rows.filter(r => r.category === current.category && r.brand === current.brand && r.itemType === t);
       document.getElementById('variant-section').innerHTML = vars.map(v => `
-        <div class="flex justify-between items-center border border-gray-400 p-2 rounded cursor-pointer hover:bg-yellow-100 hover:text-black transition" onclick="addToCart('${v.id}',1)">
-          <span>${v.variant}</span><span>₹${v.price}</span>
+        <div class="flex flex-col border border-gray-400 p-2 rounded cursor-pointer hover:bg-yellow-100 hover:text-black transition" onclick="addToCart('${v.id}',1)">
+          <div class="flex justify-between items-center">
+            <span>${v.variant}</span><span>₹${v.price}</span>
+          </div>
+          <div class="text-sm text-gray-400">${v.discountNote}</div>
         </div>`).join('');
       showOnly('variant-page');
     }
 
-    function backTo(step) {
-      showOnly(`${step}-page`);
-    }
-
-    function btn(label, action) {
-      return `<button onclick="${action}" class="w-full text-left px-3 py-2 bg-yellow-100 text-black hover:bg-yellow-200 rounded font-semibold">${label}</button>`;
-    }
+    function backTo(step) { showOnly(`${step}-page`); }
+    function btn(label, action) { return `<button onclick="${action}" class="w-full text-left px-3 py-2 bg-yellow-100 text-black hover:bg-yellow-200 rounded font-semibold">${label}</button>`; }
 
     function addToCart(id, qty=1) {
       cart[id] = (cart[id] || 0) + qty;
@@ -243,8 +236,10 @@
         total += amt;
         const line = `${it.brand} ${it.itemType} ${it.variant}`.trim();
         receipt.innerHTML += `<div class="flex justify-between">
-          <span>${line}</span><span>${qty} x ₹${it.price}</span>
-        </div><div class="text-right">₹${amt.toFixed(2)}</div>`;
+  <span>${line}</span>
+  <span>${qty} x ₹${it.price} = ₹${amt.toFixed(2)}</span>
+</div>`;
+
       });
       document.getElementById('receipt-total').textContent = total.toFixed(2);
       openBillModal();
@@ -252,37 +247,33 @@
 
     async function sendWhatsAppImage() {
       const number = document.getElementById('whats-num').value.trim();
-      if (!/^\d{10,}$/.test(number)) {
+      if (!/^[0-9]{10,}$/.test(number)) {
         alert('Enter valid 10+ digit number');
         return;
       }
+      const modal = document.querySelector('#bill-modal');
+      const controls = modal.querySelectorAll('button, input, .text-xs');
+      controls.forEach(el => el.style.display = 'none');
       document.getElementById('bill-modal').scrollIntoView();
       await new Promise(res => setTimeout(res, 300));
-      html2canvas(document.querySelector('#bill-modal')).then(canvas => {
+      html2canvas(modal).then(canvas => {
+        controls.forEach(el => el.style.display = '');
         canvas.toBlob(blob => {
-          const file = new File([blob], 'bill.png', { type: 'image/png' });
+          const now = new Date();
+          const filename = `bill_${now.toLocaleDateString().replace(/\//g, '-')}_${now.toLocaleTimeString().replace(/:/g, '-')}`;
+          const file = new File([blob], `${filename}.png`, { type: 'image/png' });
           const link = document.createElement('a');
           link.href = URL.createObjectURL(file);
-          link.download = 'bill.png';
+          link.download = file.name;
           link.click();
           window.open(`https://wa.me/${number}`, '_blank');
         });
       });
     }
 
-    function openBillModal() {
-      document.getElementById('bill-modal').classList.remove('hidden');
-    }
-
-    function closeBillModal() {
-      document.getElementById('bill-modal').classList.add('hidden');
-    }
-
-    function downloadBillPDF() {
-      const bill = document.querySelector('#bill-modal');
-      html2pdf().from(bill).save("bill.pdf");
-    }
-
+    function openBillModal() { document.getElementById('bill-modal').classList.remove('hidden'); }
+    function closeBillModal() { document.getElementById('bill-modal').classList.add('hidden'); }
+    function downloadBillPDF() { html2pdf().from(document.querySelector('#bill-modal')).save("bill.pdf"); }
     function resetAll() {
       cart = {};
       renderCart();
